Export, import work to follow.
Signed-off-by: LeonZong <noelstriangle@gmail.com>

--- a/app/src/main/res/layout/content_analrow.xml
+++ b/app/src/main/res/layout/content_analrow.xml
@@ -13,7 +13,7 @@
         android:layout_marginEnd="212dp"
         android:layout_marginBottom="8dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="@color/white"
+        android:textColor="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
