--- a/app/src/main/res/layout/content_teamrow.xml
+++ b/app/src/main/res/layout/content_teamrow.xml
@@ -8,10 +8,10 @@
         android:id="@+id/titleText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="128dp"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="128dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="@color/white"
+        android:textColor="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -22,9 +22,9 @@
         android:id="@+id/subTitleText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="128dp"
         android:layout_marginStart="16dp"
-        android:textColor="@color/white"
+        android:layout_marginEnd="128dp"
+        android:textColor="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleText" />
@@ -35,7 +35,7 @@
         android:layout_height="0dp"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@color/white"
+        android:textColor="@color/gray"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
