--- a/app/src/main/res/layout/fragment_matches.xml
+++ b/app/src/main/res/layout/fragment_matches.xml
@@ -8,14 +8,17 @@
         android:id="@+id/imageView2"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:visibility="gone"
         android:contentDescription="@string/no_matches"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.72"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/no_teams" />
+        app:layout_constraintVertical_bias="0.59"
+        android:scaleX="1.55"
+        android:scaleY="1.55"
+        app:srcCompat="@drawable/no_matches" />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refreshMatches"
@@ -33,12 +36,12 @@
         android:id="@+id/matchesAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:clickable="true"
         android:focusable="true"
         android:textSize="18sp"
-        app:backgroundTint="@color/colorPrimaryDark"
+        app:backgroundTint="@color/colorPrimary"
         app:elevation="24dp"
         app:fabIcon="@drawable/baseline_add_24"
         app:fabIconColor="@color/white"
