--- a/app/src/main/res/layout/fragment_scouting.xml
+++ b/app/src/main/res/layout/fragment_scouting.xml
@@ -33,12 +33,12 @@
         android:id="@+id/scoutingAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:clickable="true"
         android:focusable="true"
         android:textSize="18sp"
-        app:backgroundTint="@color/colorPrimaryDark"
+        app:backgroundTint="@color/colorPrimary"
         app:elevation="24dp"
         app:fabIcon="@drawable/baseline_add_24"
         app:fabIconColor="@color/white"
