--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -10,4 +10,17 @@
     <item
         android:id="@+id/settings"
         android:title="@string/settings" />
+    <item
+        android:id="@+id/deleteTeam"
+        android:title="@string/delete_team" />
+    <item
+        android:id="@+id/deleteMatch"
+        android:title="@string/delete_match" />
+    <item
+        android:id="@+id/export"
+        android:title="@string/export_teams" />
+    <item
+        android:id="@+id/export2"
+        android:title="@string/export_matches" />
+
 </menu>
