--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4caf50</color>
+    <color name="colorPrimary">#4CAF50</color>
     <color name="colorPrimaryDark">#1b5e20</color>
     <color name="colorAccent">#ffea00</color>
-    <color name="white">#ffffff</color>
+    <color name="white">#FFFFFF</color>
     <color name="red">#FF1744</color>
     <color name="blue">#039BE5</color>
     <color name="colorDivider">#66bb6a</color>
     <color name="gray">#616161</color>
-    <color name="transparent">#00ffffff</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
