Exporting and importing of teams is almost 100% reliable. Importing of matches is not fully good yet, but we're getting there! Displays are updated now, and standard deviation is calculated, and a prediction for the match result is now provided!
Signed-off-by: LeonZong <noelstriangle@gmail.com>

--- a/app/src/main/res/layout/fragment_matchdetails.xml
+++ b/app/src/main/res/layout/fragment_matchdetails.xml
@@ -13,6 +13,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/dontworry"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Prediction"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/matchTable" />
+
             <Button
                 android:id="@+id/save"
                 android:layout_width="wrap_content"
@@ -149,9 +160,8 @@
                 android:text="@string/results"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/matchTable" />
+                app:layout_constraintTop_toBottomOf="@+id/predictionTable" />
 
             <TextView
                 android:id="@+id/number"
@@ -186,6 +196,32 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/scoutedMatchPrediction" />
+
+            <TableLayout
+                android:id="@+id/predictionTable"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/dontworry">
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </TableLayout>
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
