--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#4CAF50</color>
     <color name="colorPrimaryDark">#1b5e20</color>
-    <color name="colorAccent">#ffea00</color>
+    <color name="colorAccent">#3F51B5</color>
     <color name="white">#FFFFFF</color>
     <color name="red">#FF1744</color>
     <color name="blue">#039BE5</color>
